feat: Add Bluesky integration to social feed
- Added @bluesky-social/api SDK for Bluesky AT Protocol integration
- Created comprehensive Bluesky types for posts, authors, and authentication
- Implemented Bluesky store with Zustand for state management and persistence
- Added Bluesky login modal with handle and app password authentication
- Integrated Bluesky into feed page with connection status and disconnect functionality
- Support for Bluesky timeline, following, and likes feeds
- Added like and repost functionality for Bluesky posts
- Enhanced feed page to support both Mastodon and Bluesky authentication
- Beautiful glass morphism UI for Bluesky connection and status
- Proper error handling and loading states for Bluesky operations

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:fix": "eslint src --ext ts,tsx --fix"
   },
   "dependencies": {
+    "@bluesky-social/api": "^0.15.27",
     "@hookform/resolvers": "^3.3.0",
     "@tauri-apps/api": "^2.0.0",
     "@tauri-apps/plugin-dialog": "^2.4.0",
