Improve PostInspector: glass effect, better layout, Bluesky replies support
- Redesigned PostInspector with glassmorphism effects matching footer style
- Added proper Bluesky reply fetching using getPostThread API
- Improved header design with author profile info and platform badges
- Made subtitles smaller and less prominent
- Fixed footer layout to not cover comments section
- Added debug logging for profile info troubleshooting
- Optimized space usage for better content display
- Enhanced glass text colors and styling consistency
- Removed unused InspectPanel component

--- a/env.example
+++ b/env.example
@@ -12,6 +12,12 @@ MASTODON_CLIENT_SECRET=your_client_secret_here
 FACEBOOK_APP_ID=your_facebook_app_id
 FACEBOOK_APP_SECRET=your_facebook_app_secret
 
+# GitHub Configuration (Required for feedback system)
+# Create a Personal Access Token at https://github.com/settings/tokens
+# with 'repo' scope to create issues in private repositories
+# or 'public_repo' scope for public repositories
+GITHUB_TOKEN=your_github_token_here
+
 # AI Configuration (Optional)
 # For AI companion and echo engine features
 OLLAMA_BASE_URL=http://localhost:11434
