--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,8 @@ thiserror = "1.0"
 tauri-plugin-dialog = "2.0"
 sqlx-migrate = "0.7.1"
 url = "2.5"
+reqwest = { version = "0.11", features = ["json"] }
+base64 = "0.21"
 
 [features]
 # This feature is used for production builds or when `devPath` points to the filesystem
